--- a/package.json
+++ b/package.json
@@ -1,36 +1,43 @@
 {
-  "name": "hello-npm",
-  "version": "1.0.0",
-  "description": "A template npm package",
-  "keywords": [
-    "vitest",
-    "npm",
-    "template"
-  ],
-  "license": "MIT",
-  "author": "Mark Wiemer",
-  "main": "index.js",
-  "scripts": {
-    "fixup": "npm run packagejson_fix && npm run quality_fix",
-    "fixup//": "echo Fix auto-fixable problems with the project",
-    "packagejson": "npm run packagejson_inner -- --check",
-    "packagejson//": "echo Check whether package.json is sorted or sort it",
-    "packagejson_fix": "npm run packagejson_inner",
-    "packagejson_inner": "sort-package-json",
-    "quality": "npm run quality_inner -- --max-warnings=0 && echo No quality problems",
-    "quality//": "echo Checks code quality for common mistakes",
-    "quality_fix": "npm run quality_inner -- --fix",
-    "quality_inner": "eslint src --ext ts",
-    "test": "vitest",
-    "validate": "npm run packagejson && npm run quality && npm run test -- run",
-    "validate//": "echo Ensure everything with the project is working correctly"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "eslint": "^8.25.0",
-    "prettier": "2.7.1",
-    "sort-package-json": "^2.0.0",
-    "vitest": "^0.24.3"
-  }
+    "name": "hello-npm",
+    "version": "1.0.0",
+    "description": "A template npm package",
+    "keywords": [
+        "vitest",
+        "npm",
+        "template",
+        "prettier",
+        "eslint",
+        "husky"
+    ],
+    "license": "MIT",
+    "author": "Mark Wiemer",
+    "main": "index.js",
+    "scripts": {
+        "fixup": "npm run packagejson_fix && npm run format_fix && npm run quality_fix",
+        "fixup//": "echo Fix auto-fixable problems with the project",
+        "format": "npm run format_inner -- --check .",
+        "format//": "echo Match code style standards",
+        "format_fix": "npm run format_inner -- --write .",
+        "format_inner": "prettier",
+        "packagejson": "npm run packagejson_inner -- --check",
+        "packagejson//": "echo Check whether package.json is sorted or sort it",
+        "packagejson_fix": "npm run packagejson_inner",
+        "packagejson_inner": "sort-package-json",
+        "quality": "npm run quality_inner -- --max-warnings=0 && echo No quality problems",
+        "quality//": "echo Checks code quality for common mistakes",
+        "quality_fix": "npm run quality_inner -- --fix",
+        "quality_inner": "eslint src --ext ts",
+        "test": "vitest",
+        "validate": "npm run packagejson && npm run format && npm run quality && npm run test -- run",
+        "validate//": "echo Ensure everything with the project is working correctly"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.40.0",
+        "@typescript-eslint/parser": "^5.40.0",
+        "eslint": "^8.25.0",
+        "prettier": "2.7.1",
+        "sort-package-json": "^2.0.0",
+        "vitest": "^0.24.3"
+    }
 }
